--- a/style.css
+++ b/style.css
@@ -12,13 +12,22 @@ body {
     grid-template-rows: 50px 800px;
 }
 
+.controls {
+    grid-row-start: 2;
+    grid-row-end: 2;
+    margin-top: 200px;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    height: 300px;
+}
+
 .gameboard {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 2;
     display: flex;
-    flex-shrink: 1;
     flex-wrap: wrap;
     width: 600px;
     height: 660px;
@@ -33,4 +42,14 @@ body {
     height: 220px;
     width: 200px;
     outline: none;
+}
+
+button, p{
+    font-family: 'Comic Neue', cursive;
+    font-size: 2em;
+}
+
+button {
+    border-radius: 10px;
+    padding: 10px;
 }
